--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Žum&#x3c0;čka</string>
     <string name="action_settings">Settings</string>
-
+    <string name="saved_into_clipboard">Saved into clipboard</string>
+    <string name="unable_to_finish_operation">Unable to finish operation</string>
 
     <string name="dummy_short">Lorem Ipsum</string>
     <string name="dummy">Lorem Ipsum is simply dummy text</string>
