--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,19 @@
     <string name="dummy">Lorem Ipsum is simply dummy text</string>
     <string name="dummy_mid">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s…</string>
     <string name="dummy_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
+    <string name="credentials">Credentials</string>
+    <string name="login">Login</string>
+    <string name="logout">Logout</string>
+    <string name="user">Username</string>
+    <string name="password">Password</string>
+    <string name="load_images">Load Images</string>
+    <string name="settings">Settings</string>
+    <string name="wheeeee">Wheeeeeeee!</string>
+    <string name="ok">OK</string>
+    <string name="done">Done</string>
+
+
+    <string name="err_no_username">No Username!</string>
+    <string name="err_no_password">No Password!</string>
+    <string name="err_fail">Fail :(!</string>
 </resources>
