--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="err_no_username">No Username!</string>
     <string name="err_no_password">No Password!</string>
     <string name="err_fail">Fail :(</string>
+    <string name="err_empty_subject">Empty subject</string>
     <string name="err_empty_msg">Empty message</string>
     <string name="subject">Subject</string>
     <string name="message">Message</string>
