--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="favorites">Favorites</string>
     <string name="own">Own</string>
     <string name="filter">Filter</string>
+    <string name="nick_name">Nickname</string>
 </resources>
