--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="resolution">Resolution</string>
     <string name="size">Size</string>
     <string name="notification_header">Žum&#x3c0;čoviny…</string>
+    <string name="offline">Offline</string>
+    <string name="online">Online</string>
 </resources>
